--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
 <body style="font-family: 'Ysabeau SC', sans-serif; background: rgb(35, 57, 84);">
   <div class="relative bg-white overflow-hidden" style="background: rgb(255, 245, 160 );">
     <div class="max-w-7xl mx-auto">
-      <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+      <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32" style="background-color: rgb(21, 2, 2 );">
         <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
           fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
-          <polygon points="50,0 100,0 50,100 0,100" />
+          <polygon points="50,0 100,0 50,100 0,100" style="color: rgb(218, 0, 0);"/>
         </svg>
         <div style="width: 100%;">
           <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
